metadata/force-app/main/default/objects/Custom_Contact__c/Custom_Contact__c.object-meta.xml
<CustomObject>
    <label>Custom Contact</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>