metadata/force-app/main/default/objects/Custom_Contact__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>First_Name__c &amp;  &quot; &quot;  &amp;   Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>