metadata/force-app/main/default/objects/Custom_Contact__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>29999</length>
    <type>LongTextArea</type>
</CustomField>