metadata/force-app/main/default/objects/Custom_Contact__c/fields/Source_Professional_Entity_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Professional_Entity_Record_Id__c</fullName>
    <label>Source Professional Entity Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>