metadata/force-app/main/default/objects/Custom_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>First_Name__c</columns>
    <columns>NAME</columns>
    <columns>Professional_Entity__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>